<resources>
    <string name="app_name">36氪</string>
    <!--z主界面-->
    <string name="drawer_tv_all">全部</string>
    <string name="drawer_tv_early">早期项目</string>
    <string name="drawer_tv_b_end">B轮后期</string>
    <string name="drawer_tv_big">大公司</string>
    <string name="drawer_tv_capital">资本</string>
    <string name="drawer_tv_depth">深度</string>
    <string name="drawer_tv_study">研究</string>
    <string name="drawer_tv_tv">视频</string>
    <!--标题-->
    <string name="title_tv">早期项目</string>
    <!--标题活动Pop-->
    <string name="title_atying">关注投资人</string>
    <!--寻找投资人-->
    <string name="title_find_tv">寻找投资人</string>
    <string name="visibity_tv">111111</string>
    <!--我是创业者-->
    <string name="business_person_project_tv">项目动态</string>
    <string name="business_person_report_tv">寻求报道</string>
    <string name="business_person_financing_tv">申请融资</string>
    <string name="business_person_apply_tv">氪空间报名</string>
    <!--我是专业投资人界面-->
    <string name="my_equity_person_index">36氪指数</string>
    <string name="my_equity_person_explosive_power">最具爆发力的项目</string>
    <string name="my_equity_person_new_progect">最新涌现的项目</string>
    <!--新闻详情页-->
    <string name="news_details_author_tv">作者</string>
    <!--搜索界面-->
    <string name="activity_search_et_hint">搜索新闻/用户/公司</string>
    <string name="activity_search_tv_cancel">取消</string>
    <string name="activity_search_tv_history">无搜索记录</string>
    <string name="activity_search_tv_history_list">历史搜索</string>
    <!--搜索界面的Pop-->
    <string name="search_list_pop_news_tv">搜索新闻</string>
    <string name="search_list_pop_more_tv">更多</string>
</resources>
