<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_root_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--搜索界面-->
    <LinearLayout
        android:id="@+id/search_et_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background"
        android:orientation="horizontal"
        android:padding="@dimen/activity_search_padding">

        <ImageView
            android:id="@+id/search_aty_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_search_padding"
            android:src="@mipmap/seaarch_nav_icon_search" />

        <com.sunhongxu.a36kr.view.SearchEditText
            android:id="@+id/search_aty_et"
            android:layout_width="0dp"
            style="?android:attr/textViewStyle"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/activity_search_et_hint"
            android:textColor="@color/activity_search_et_color"
            android:textSize="@dimen/activity_search_et_size" />

        <TextView
            android:id="@+id/search_aty_tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/activity_search_tv_cancel"
            android:textColor="@color/activity_search_cancel_color"
            android:textSize="@dimen/activity_search_tv_cancel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_no_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/search_ph_search" />

        <TextView
            android:id="@+id/history_search_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_search_tv_history" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_aty_list_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_search_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/history_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_search_tv_history_list"
            android:textSize="@dimen/activity_search_tv_history_list" />

        <ListView
            android:id="@+id/search_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
