<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/business_root_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--我是创业者-->
    <include layout="@layout/item_find_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background"
        android:orientation="horizontal"
        android:padding="@dimen/business_person_layout_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/discovery_icon_item1" />

        <TextView
            android:layout_width="@dimen/business_person_weight_suit"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/business_person_tv_margin_left"
            android:layout_weight="1"
            android:text="@string/business_person_project_tv" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/common_arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background"
        android:orientation="horizontal"
        android:padding="@dimen/business_person_layout_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/news_icon_seek" />

        <TextView
            android:layout_width="@dimen/business_person_weight_suit"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/business_person_tv_margin_left"
            android:layout_weight="1"
            android:text="@string/business_person_report_tv" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/common_arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background"
        android:orientation="horizontal"
        android:padding="@dimen/business_person_layout_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/find_icon_entrepreneurship_financing" />

        <TextView
            android:layout_width="@dimen/business_person_weight_suit"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/business_person_tv_margin_left"
            android:layout_weight="1"
            android:text="@string/business_person_financing_tv" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/common_arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background"
        android:orientation="horizontal"
        android:padding="@dimen/business_person_layout_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/find_icon_entrepreneurship_signup" />

        <TextView
            android:layout_width="@dimen/business_person_weight_suit"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/business_person_tv_margin_left"
            android:layout_weight="1"
            android:text="@string/business_person_apply_tv" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/common_arrow" />
    </LinearLayout>

</LinearLayout>
