<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/my_eq_person"
    android:layout_height="match_parent">
    <!--我是专业投资人界面-->
    <include layout="@layout/item_find_title" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background"
        android:orientation="horizontal"
        android:padding="@dimen/my_equity_person_layout_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/discovery_icon_insight" />

        <TextView
            android:layout_width="@dimen/my_equity_person_weight_suit"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/my_equity_person_tv_margin_left"
            android:layout_weight="1"
            android:text="@string/my_equity_person_index" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/common_arrow" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background"
        android:orientation="horizontal"
        android:padding="@dimen/my_equity_person_layout_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/discovery_icon_explosive1" />

        <TextView
            android:layout_width="@dimen/my_equity_person_weight_suit"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/my_equity_person_tv_margin_left"
            android:layout_weight="1"
            android:text="@string/my_equity_person_explosive_power" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/common_arrow" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background"
        android:orientation="horizontal"
        android:padding="@dimen/my_equity_person_layout_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/discovery_icon_new_research" />

        <TextView
            android:layout_width="@dimen/my_equity_person_weight_suit"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/my_equity_person_tv_margin_left"
            android:layout_weight="1"
            android:text="@string/my_equity_person_new_progect" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/common_arrow" />
    </LinearLayout>


</LinearLayout>
